Add new ion-input

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Gabriel Carrillo Florez
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,7 +14,9 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <h1>Soy Gabo.Dev();</h1>
+    <ion-input placeholder="Title"></ion-input>
+    <ion-input placeholder="Description"></ion-input>
+    <ion-input placeholder="Done"></ion-input>
   </div>
 </ion-content>
