--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,17 @@
+.div-ion-toolbar {
+  display: flex;
+}
+
+ion-fab-button {
+  width: 51px;
+  height: 54px;
+}
+
+.title {
+  text-align: center;
+  font-size: 35px;
+}
+
 #container {
   text-align: center;
 
