fix rendering bug

--- a/src/app/componets/card-task/card-task.component.html
+++ b/src/app/componets/card-task/card-task.component.html
@@ -5,4 +5,5 @@
   </ion-card-header>
 
   <ion-card-content>{{ datas.description || 'Card Content' }}</ion-card-content>
+  <ion-checkbox ></ion-checkbox>
 </ion-card>
