--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,18 @@
+
+.empty-tasks__title {
+  text-align: center;
+  color: aqua;
+}
+
+.empty-tasks__img {
+  justify-content: center;
+  align-items: center;
+}
+
+.empty-tasks__praf {
+  text-align: center;
+}
+
 .div-ion-toolbar {
   display: flex;
 }
