--- a/src/app/componets/card-task/card-task.component.html
+++ b/src/app/componets/card-task/card-task.component.html
@@ -1,9 +1,10 @@
 <ion-card [color]="datas.color">
   <ion-card-header>
-    <ion-card-title>{{ datas.title || 'Card Title' }}</ion-card-title>
+    <ion-card-title>{{ datas.title || 'Card Title' }}  <ion-checkbox (ionChange)="onCheckboxChange($event)"></ion-checkbox>
+    </ion-card-title>
     <ion-card-subtitle>{{ datas.currentDate }}</ion-card-subtitle>
   </ion-card-header>
 
   <ion-card-content>{{ datas.description || 'Card Content' }}</ion-card-content>
-  <ion-checkbox ></ion-checkbox>
+  
 </ion-card>
